--- a/website/app/templates/base.html
+++ b/website/app/templates/base.html
@@ -10,7 +10,7 @@
 	{% endblock %}
 </head>
 <body>
-	<nav class="navbar navbar-inverse navbar-default my-navbar">
+	<nav class="navbar navbar-inverse navbar-default my-navbar navbar-fixed">
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
