--- a/website/app/templates/base.html
+++ b/website/app/templates/base.html
@@ -26,7 +26,7 @@
 			<ul class="nav navbar-nav navbar-right">
 			    <li><a href="#">Log In</a></li>
 			    <li>
-			    <a href="#">Sign Up</a>
+			    <a href="/registration">Sign Up</a>
 			    </li>
 			  </ul>
 			</div><!-- /.navbar-collapse -->
