cleaned up registration css

--- a/website/app/templates/base.html
+++ b/website/app/templates/base.html
@@ -1,7 +1,7 @@
 <!doctype HTML>
 <html>
 <head>
-	<title>PeerTutor -- {{ pagename }}</title>
+	<title>PeerTutor | {{ pagename }}</title>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw==" crossorigin="anonymous">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha256-KXn5puMvxCw+dAYznun+drMdG1IFl3agK0p/pqT9KAo= sha512-2e8qq0ETcfWRI4HJBzQiA3UoyFk6tbNyG+qSaIBZLyW9Xf3sWZHN/lxe9fTh1U45DpPf07yj94KsUHHWe4Yk1A==" crossorigin="anonymous">
 	</script>
@@ -10,7 +10,7 @@
 	{% endblock %}
 </head>
 <body>
-	<nav class="navbar navbar-inverse navbar-default my-navbar navbar-fixed">
+	<nav class="navbar navbar-inverse navbar-default my-navbar navbar-fixed my-nav">
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
